[build-system]
requires = ["setuptools>=42", "wheel", "pybind11~=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "delaunay-geogram"
version = "0.0.1"
license = "GPL-3.0-or-later"
description = "Semantic segmentation on large-scale 3D scenes"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["Delaunay Triangulation", "Geogram", "Python", "C++", "Mesh"]
authors = [
  { name = "Carlos Cabo", email = "carloscabo@uniovi.es" },
  { name = "Diego Laino", email = "diegolainor@gmail.com" },
]
maintainers = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310,311,312}

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312   

[testenv]
changedir = tests
deps =
  pytest >= 7.4
  numpy >= 1.7
commands = pytest -s --basetemp="{envtmpdir}" {posargs} delaunay.py
"""

[tool.cibuildwheel]
build = "cp3{9,10,11,12}-*"
skip = "*-musllinux*"